@@ -12,6 +12,7 @@ CHANGELOG
 * Added: HTML rel attribute to next and previous buttons.
 
 * Improved: Image display.
+* Improved: Removed unused function CoursePress_Data_Course::is_course_preview()
 
 * Fixed: Default unit title height to avoid collapse when empty.
 * Fixed: Instructor profile course lists on multisite.
